<resources>
    <string name="app_name">바로 잇템</string>
    <string name="digital">디지털기기</string>
    <string name="camera">카메라</string>
    <string name="home_appliances">홈/가전</string>
    <string name="beauty">뷰티</string>
    <string name="animal">반려동물</string>
    <string name="activity">액티비티</string>
    <string name="title">Borrow it item!</string>
    <string name="hello_blank_fragment">hi</string>
</resources>