<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_fragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <ImageButton
                    android:id="@+id/digital"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/digital"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#14D3FF"
                    android:contentDescription="@string/digital" />
                <!-- transparent: 이미지 배경색 없애기 -->
                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/camera"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#512DA8"
                    android:layout_marginHorizontal="40dp"
                    android:contentDescription="@string/camera"/>
                <ImageButton
                    android:id="@+id/home_appliances"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/cleaner"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#E53935"
                    android:contentDescription="@string/home_appliances"/>
                <!-- scaleType: 이미지의 비율 조절
                / centerInside : 이미지가 영역에서 벗어나면 맞춰 보여줌 />-->
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="70dp"
                android:gravity="center">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/digital"
                    android:textSize="15sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:gravity="center"
                    android:text="@string/camera"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home_appliances"
                    android:textSize="15sp"
                    android:gravity="center"/>
            </LinearLayout>
            <!-- 첫 줄 이미지 버튼 + 텍스트 끝-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/beauty"
                    android:src="@drawable/beauty"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#B468C8"
                    android:contentDescription="@string/beauty"/>
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/animal"
                    android:src="@drawable/dog"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#FF5252"
                    android:layout_marginHorizontal="40dp"
                    android:contentDescription="@string/animal"/>
                <ImageButton
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:id="@+id/activity"
                    android:src="@drawable/activity"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    app:tint="#3EA99F"
                    android:contentDescription="@string/activity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/beauty"
                    android:textSize="15sp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/animal"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_marginHorizontal="40dp"/>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activity"
                    android:textSize="15sp"
                    android:gravity="center"/>
            </LinearLayout>
            <!-- 두번째 줄 이미지 버튼 + 텍스트 끝-->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>